# shoulder_joint_poseestimator

src/: package.xml  shoulder_joint_pose_estimator.xml
src/include/: shoulderJointPoseEstimator.hpp
src/src/: shoulderJointPoseEstimator.cpp
