<?xml version="1.0"?>
<package>
    <name>shoulder_joint_pose_estimator</name>
    <version>0.0.0</version>
    <description>A package for estimating the shoulder joint pose of a myoRobotics arm</description>
    <maintainer email="simon.trendel@tum.de">Simon Trendel</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>

    <build_depend>message_generation</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>rviz</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>visualization_msgs</build_depend>
    <build_depend>tf</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>message_generation</run_depend>
    <run_depend>pluginlib</run_depend>
    <run_depend>visualization_msgs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>rviz</run_depend>

    <export>
        <rviz plugin="${prefix}/shoulder_joint_pose_estimator.xml"/>
    </export>
</package>
